# python-ly

./: .gitignore  .gitlab-ci.yaml  .readthedocs.yaml  CHANGELOG.md  ChangeLog  INSTALL.rst  MANIFEST.in  README.md  README.rst  REUSE.toml  dev-only-reqs.txt  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
doc/: Makefile  command.rst  conf.py  index.rst  ly.cli.rst  ly.data.rst  ly.lex.rst  ly.music.rst  ly.musicxml.rst  ly.pitch.rst  ly.rst  ly.server.rst  ly.xml.rst  servercmd.rst
ly/: __init__.py  barcheck.py  colorize.py  cursortools.py  docinfo.py  document.py  dom.py  duration.py  etreeutil.py  indent.py  node.py  pkginfo.py  reformat.py  rests.py  rhythm.py  slexer.py  util.py  words.py
ly/cli/: __init__.py  command.py  doc.py  main.py  options.py  output.py  setvar.py
ly/data/: Makefile  __init__.py  _data.py  _lilypond_data.py  _scheme_data.py  getdata.ly  makeschemedata.py
ly/lex/: __init__.py  _mode.py  _token.py  docbook.py  html.py  latex.py  lilypond.py  mup.py  scheme.py  texinfo.py
ly/music/: __init__.py  event.py  items.py  read.py
ly/musicxml/: __init__.py  create_musicxml.py  iter_mediator.py  ly2xml_mediator.py  lymus2musxml.py  xml_objs.py
ly/pitch/: __init__.py  abs2rel.py  rel2abs.py  transform.py  translate.py  transpose.py
ly/server/: __init__.py  command.py  doc.py  handler.py  main.py  options.py  testjson.py
ly/xml/: __init__.py  xml-export-init.ly  xml-export.ily
tests/: musicxml.xsd  test_reformat.py  test_xml.py
tests/test_xml_files/: accidentals.ly  accidentals.musicxml  accidentals2.ly  accidentals2.musicxml  barline.ly  barline.xml  barlines.ly  barlines.musicxml  barlines2.ly  barlines2.musicxml  barlines3.ly  barlines3.musicxml  beam.ly  beams.ly  beams.musicxml  beams2.ly  beams2.musicxml  break.ly  break.xml  breaks.ly  breaks.musicxml  breath_marks.ly  breath_marks.musicxml  breathe.ly  breathe.xml  chord_copy.ly  chord_copy.musicxml  chord_duration.ly  chord_duration.xml  chord_symbols.ly  chord_symbols.musicxml  chord_ties.ly  chord_ties.musicxml  church_modes.ly  church_modes.xml  dynamics.ly  dynamics.musicxml  dynamics.xml  empty_part.ly  empty_part.musicxml  (+87 more)
